GPC/tests/examples/fail/nonExistantObject2.gpc


int nonExistantObject2() {
    
    obj.m1(); 
    return 0;
}
